--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,8 +36,8 @@ before_build:
 #   cmd: 7z a %APPVEYOR_BUILD_FOLDER%\LGML_%PLATFORM%.zip %APPVEYOR_BUILD_FOLDER%\Builds\VisualStudio2015\%PLATFORM%\%CONFIGURATION%\App\*.exe
 
 after_build:
-  cmd: python %APPVEYOR_BUILD_FOLDER%\Scripts\buildScript.py --os=windows --configuration=%CONFIGURATION% --arch=%PLATFORM%  --exportpath=%APPVEYOR_BUILD_FOLDER%
-  cmd: python %APPVEYOR_BUILD_FOLDER%\Scripts\buildScript.py --package --export
+  - cmd: python %APPVEYOR_BUILD_FOLDER%\Scripts\buildScript.py --os=windows --configuration=%CONFIGURATION% --arch=%PLATFORM%  --exportpath=%APPVEYOR_BUILD_FOLDER%
+  - cmd: python %APPVEYOR_BUILD_FOLDER%\Scripts\buildScript.py --package --export
 
 artifacts:
   - path: '*.zip'
