--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,7 @@ environment:
 
 before_build:
   - "python --version"
-  - "pip install future"
+  - "pip install requests"
   - ps: |
       echo "submodule"
       git submodule -q update --init --recursive
