--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,8 +33,8 @@ before_build:
 # after_build:
 #   cmd: 7z a %APPVEYOR_BUILD_FOLDER%\LGML_%PLATFORM%.zip %APPVEYOR_BUILD_FOLDER%\Builds\VisualStudio2015\%PLATFORM%\%CONFIGURATION%\App\*.exe
 
-after_build:
-  - "pip install future requests"
+deploy_script:
+  - pip install future requests
   - cmd: python %APPVEYOR_BUILD_FOLDER%\Scripts\buildScript.py --configure --os=windows --configuration=%CONFIGURATION% --arch=%PLATFORM%  --exportpath=%APPVEYOR_BUILD_FOLDER%
   - cmd: python %APPVEYOR_BUILD_FOLDER%\Scripts\buildScript.py --package --export
 
