--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,9 @@ jobs:
       - run:
           name: build and package LGML
           command: |
-            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
-            python3 Scripts/buildScript.py --build --package
-            sudo  sh Scripts/linux/installExportDeps.sh
-            python3 Scripts/buildScript.py --export
+            python Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            python Scripts/buildScript.py --build --package
+            python Scripts/buildScript.py --export
             ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
           path: /tmp/build/
@@ -52,8 +51,8 @@ jobs:
           name: build and package LGML32
           command: |
             sudo  sh Scripts/linux/installExportDeps.sh
-            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
-            python3 Scripts/buildScript.py --build --package --export;
+            python Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            python Scripts/buildScript.py --build --package --export;
             ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
           path: /tmp/build32 #$DST_LGML_PATH
@@ -94,8 +93,9 @@ jobs:
             set -x
             export PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig
             export CXX=arm-linux-gnueabihf-g++
-            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
-            python3 Scripts/buildScript.py --build --package --export;
+            sh Scripts/linux/installExportDeps.sh
+            python Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            python Scripts/buildScript.py --build --package --export;
             arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "$DST_LGML_PATH/dependencies.txt"
 
       - store_artifacts:
