--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: build and package LGML
           command: |
-            sudo sh Scripts/linux/installExportDeps.sh
+            sh Scripts/linux/installExportDeps.sh
             python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
             python3 Scripts/buildScript.py --build --package
             python3 Scripts/buildScript.py --export
@@ -47,12 +47,12 @@ jobs:
             apt-get -qq update
             apt-get install -y git
             git submodule update --init --recursive
-            sudo sh Scripts/linux/installDeps.sh && sudo  sh Scripts/linux/installDevDeps.sh 
+            sh Scripts/linux/installDeps.sh && sh Scripts/linux/installDevDeps.sh 
       - run:
           name: build and package LGML32
           command: |
-            sudo sh Scripts/linux/installExportDeps.sh
-            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            sh Scripts/linux/installExportDeps.sh
+            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release --arch=$TARGET_CPU
             python3 Scripts/buildScript.py --build --package --export;
             ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
@@ -68,7 +68,7 @@ jobs:
       - image: ubuntu
         environment:
           TARGET_CPU: armhf
-          TARGET_ARCH: -mcpu=cortex-a53 -mfpu=neon-fp-armv8 -mfloat-abi=hard # arch for JUCEs linux makefile -> RPI3
+          TARGET_ARCH: -mcpu=cortex-a53 -mfpu=neon-fp-armv8 -mfloat-abi=hard # arch flags for JUCEMakefile -> RPI3
           DST_LGML_PATH: /tmp/buildRasp
 
     steps:
@@ -95,7 +95,7 @@ jobs:
             export PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig
             export CXX=arm-linux-gnueabihf-g++
             sh Scripts/linux/installExportDeps.sh
-            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release
+            python3 Scripts/buildScript.py --configure --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release --arch=$TARGET_CPU
             python3 Scripts/buildScript.py --build --package --export;
             arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "$DST_LGML_PATH/dependencies.txt"
 
