travis: update export deps to py3

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,18 +68,15 @@ install:
   - if [ "$TARGET" == "linux" ]|| [ "$TARGET" == "linuxarmv6" ] || [ "$TARGET" == "linuxarmv7" ]; then
         sudo sh Scripts/linux/installDeps.sh && sudo  sh Scripts/linux/installDevDeps.sh;
     elif [ "$TARGET" == "osx" ] ; then
-        sudo sh Scripts/osx/installDevDeps.sh;
+        sudo sh Scripts/osx/installDevDeps.sh && sudo sh Scripts/osx/installExportDeps.sh;
     fi
 
 
 script:
-    - python Scripts/buildScript.py --configure --build --configuration=$CONFIGURATION --os=$TARGET;
+    - python3 Scripts/buildScript.py --configure --build --configuration=$CONFIGURATION --os=$TARGET;
 
 after_success:
-  - if [ "$TARGET" == "osx" ] ; then
-        sudo sh Scripts/osx/installExportDeps.sh;
-    fi
-  - python Scripts/buildScript.py --package --export;
+  - python3 Scripts/buildScript.py --package --export;
 
 git:
   depth: 100
